syntax = "proto3";

package users.v1;

option go_package = "github.com/mumumio1/coldy/proto/users/v1;usersv1";

import "google/protobuf/timestamp.proto";
import "proto/common/v1/common.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
  string id = 1;
  string email = 2;
  string full_name = 3;
  string phone = 4;
  common.v1.Address address = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message RegisterRequest {
  common.v1.RequestMetadata metadata = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string phone = 5;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message LoginRequest {
  common.v1.RequestMetadata metadata = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
}

message GetUserRequest {
  common.v1.RequestMetadata metadata = 1;
  string user_id = 2;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  common.v1.RequestMetadata metadata = 1;
  string user_id = 2;
  string full_name = 3;
  string phone = 4;
  common.v1.Address address = 5;
}

message UpdateUserResponse {
  User user = 1;
}

message ListUsersRequest {
  common.v1.RequestMetadata metadata = 1;
  common.v1.PaginationRequest pagination = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  common.v1.PaginationResponse pagination = 2;
}

